# Shooter

./: CMakeLists.txt  lib.h  main.c  makefile  sftp-config.json
ext2/: ext2.c  ext2.h
fat16/: fat16.c  fat16.h
files/: .Fat16.bin.icloud
io/: io.c  io.h
utils/: utils.c  utils.h
volume_manager/: volume_manager.c  volume_manager.h
